grammar/.antlr/JavaESParser.java
// Generated from c:/Users/alexp/Documents/GitHub/JavaES/grammar/JavaESParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class JavaESParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LINE_COMMENT=1, BLOCK_COMMENT=2, WS=3, ENTERO_TIPO=4, DECIMAL_TIPO=5, 
		CADENA_TIPO=6, BOOLEANO_TIPO=7, VACIO_TIPO=8, CARACTER_TIPO=9, SI=10, 
		SINO=11, MIENTRAS=12, PARA=13, HACER=14, CAMBIAR=15, CASO=16, DEFECTO=17, 
		ROMPER=18, CONTINUAR=19, RETORNAR=20, INTENTAR=21, CAPTURAR=22, FINALMENTE=23, 
		LANZAR=24, CLASE=25, INTERFAZ=26, NUEVO=27, ESTE=28, SUPER=29, PUBLICO=30, 
		PRIVADO=31, PROTEGIDO=32, ESTATICO=33, FINAL=34, VERDADERO=35, FALSO=36, 
		NULO=37, IMPORTAR=38, PAQUETE=39, IMPRIMIR=40, LEER=41, CADENA=42, CARACTER=43, 
		DECIMAL_CIENTIFICO=44, DECIMAL=45, IDENTIFICADOR_INVALIDO=46, ENTERO=47, 
		ENTERO_HEX=48, ENTERO_OCTAL=49, IDENTIFICADOR=50, INCREMENTO=51, DECREMENTO=52, 
		SUMA=53, RESTA=54, MULTIPLICACION=55, DIVISION=56, MODULO=57, IGUALDAD=58, 
		DESIGUALDAD=59, MAYOR_IGUAL_QUE=60, MENOR_IGUAL_QUE=61, MAYOR_QUE=62, 
		MENOR_QUE=63, Y_LOGICO=64, O_LOGICO=65, NEGACION=66, SUMA_ASIGNACION=67, 
		RESTA_ASIGNACION=68, MULTIPLICACION_ASIGNACION=69, DIVISION_ASIGNACION=70, 
		MODULO_ASIGNACION=71, ASIGNACION=72, PARENTESIS_ABIERTO=73, PARENTESIS_CERRADO=74, 
		LLAVE_ABIERTA=75, LLAVE_CERRADA=76, CORCHETE_ABIERTO=77, CORCHETE_CERRADO=78, 
		PUNTO_Y_COMA=79, COMA=80, PUNTO=81, DOS_PUNTOS=82, DOS_PUNTOS_DOBLE=83, 
		FLECHA=84, ARROBA=85, INTERROGACION=86, AMPERSAND=87, PIPE=88, CIRCUNFLEJO=89, 
		TILDE=90, ERROR_LEXICO=91;
	public static final int
		RULE_programa = 0, RULE_elementoGlobal = 1, RULE_paqueteDecl = 2, RULE_importacionDecl = 3, 
		RULE_rutaCalificada = 4, RULE_claseDecl = 5, RULE_miembroClase = 6, RULE_declaracionGlobal = 7, 
		RULE_declaracionVariable = 8, RULE_variablesDeclaradas = 9, RULE_variableDeclarada = 10, 
		RULE_metodoDecl = 11, RULE_modificadores = 12, RULE_modificador = 13, 
		RULE_parametros = 14, RULE_parametro = 15, RULE_tipo = 16, RULE_tipoPrimitivo = 17, 
		RULE_bloque = 18, RULE_instruccion = 19, RULE_varLocalDecl = 20, RULE_instruccion_if = 21, 
		RULE_instruccion_while = 22, RULE_instruccion_for = 23, RULE_forInicializacion = 24, 
		RULE_declaracionFor = 25, RULE_listaExpresiones = 26, RULE_instruccion_doWhile = 27, 
		RULE_instruccion_switch = 28, RULE_casoSwitch = 29, RULE_defectoSwitch = 30, 
		RULE_instruccion_tryCatch = 31, RULE_capturarSecuencias = 32, RULE_capturarSecuencia = 33, 
		RULE_finalmenteSecuencia = 34, RULE_instruccion_return = 35, RULE_instruccion_break = 36, 
		RULE_instruccion_continue = 37, RULE_instruccion_simple = 38, RULE_expresion = 39, 
		RULE_asignacion = 40, RULE_operadorAsignacion = 41, RULE_logicoOr = 42, 
		RULE_logicoAnd = 43, RULE_igualdad = 44, RULE_relacion = 45, RULE_suma = 46, 
		RULE_producto = 47, RULE_unaria = 48, RULE_postfijo = 49, RULE_sufijo = 50, 
		RULE_primaria = 51, RULE_literal = 52, RULE_invocable = 53, RULE_nuevaInstancia = 54, 
		RULE_argumentos = 55;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "elementoGlobal", "paqueteDecl", "importacionDecl", "rutaCalificada", 
			"claseDecl", "miembroClase", "declaracionGlobal", "declaracionVariable", 
			"variablesDeclaradas", "variableDeclarada", "metodoDecl", "modificadores", 
			"modificador", "parametros", "parametro", "tipo", "tipoPrimitivo", "bloque", 
			"instruccion", "varLocalDecl", "instruccion_if", "instruccion_while", 
			"instruccion_for", "forInicializacion", "declaracionFor", "listaExpresiones", 
			"instruccion_doWhile", "instruccion_switch", "casoSwitch", "defectoSwitch", 
			"instruccion_tryCatch", "capturarSecuencias", "capturarSecuencia", "finalmenteSecuencia", 
			"instruccion_return", "instruccion_break", "instruccion_continue", "instruccion_simple", 
			"expresion", "asignacion", "operadorAsignacion", "logicoOr", "logicoAnd", 
			"igualdad", "relacion", "suma", "producto", "unaria", "postfijo", "sufijo", 
			"primaria", "literal", "invocable", "nuevaInstancia", "argumentos"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'entero'", "'decimal'", "'cadena'", "'booleano'", 
			"'vacio'", "'caracter'", "'si'", "'sino'", "'mientras'", "'para'", "'hacer'", 
			"'cambiar'", "'caso'", "'defecto'", "'romper'", "'continuar'", "'retornar'", 
			"'intentar'", "'capturar'", "'finalmente'", "'lanzar'", "'clase'", "'interfaz'", 
			"'nuevo'", "'este'", "'super'", "'publico'", "'privado'", "'protegido'", 
			"'estatico'", "'final'", "'verdadero'", "'falso'", "'nulo'", "'importar'", 
			"'paquete'", "'imprimir'", "'leer'", null, null, null, null, null, null, 
			null, null, null, "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'%'", 
			"'=='", "'!='", "'>='", "'<='", "'>'", "'<'", "'&&'", "'||'", "'!'", 
			"'+='", "'-='", "'*='", "'/='", "'%='", "'='", "'('", "')'", "'{'", "'}'", 
			"'['", "']'", "';'", "','", "'.'", "':'", "'::'", "'->'", "'@'", "'?'", 
			"'&'", "'|'", "'^'", "'~'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LINE_COMMENT", "BLOCK_COMMENT", "WS", "ENTERO_TIPO", "DECIMAL_TIPO", 
			"CADENA_TIPO", "BOOLEANO_TIPO", "VACIO_TIPO", "CARACTER_TIPO", "SI", 
			"SINO", "MIENTRAS", "PARA", "HACER", "CAMBIAR", "CASO", "DEFECTO", "ROMPER", 
			"CONTINUAR", "RETORNAR", "INTENTAR", "CAPTURAR", "FINALMENTE", "LANZAR", 
			"CLASE", "INTERFAZ", "NUEVO", "ESTE", "SUPER", "PUBLICO", "PRIVADO", 
			"PROTEGIDO", "ESTATICO", "FINAL", "VERDADERO", "FALSO", "NULO", "IMPORTAR", 
			"PAQUETE", "IMPRIMIR", "LEER", "CADENA", "CARACTER", "DECIMAL_CIENTIFICO", 
			"DECIMAL", "IDENTIFICADOR_INVALIDO", "ENTERO", "ENTERO_HEX", "ENTERO_OCTAL", 
			"IDENTIFICADOR", "INCREMENTO", "DECREMENTO", "SUMA", "RESTA", "MULTIPLICACION", 
			"DIVISION", "MODULO", "IGUALDAD", "DESIGUALDAD", "MAYOR_IGUAL_QUE", "MENOR_IGUAL_QUE", 
			"MAYOR_QUE", "MENOR_QUE", "Y_LOGICO", "O_LOGICO", "NEGACION", "SUMA_ASIGNACION", 
			"RESTA_ASIGNACION", "MULTIPLICACION_ASIGNACION", "DIVISION_ASIGNACION", 
			"MODULO_ASIGNACION", "ASIGNACION", "PARENTESIS_ABIERTO", "PARENTESIS_CERRADO", 
			"LLAVE_ABIERTA", "LLAVE_CERRADA", "CORCHETE_ABIERTO", "CORCHETE_CERRADO", 
			"PUNTO_Y_COMA", "COMA", "PUNTO", "DOS_PUNTOS", "DOS_PUNTOS_DOBLE", "FLECHA", 
			"ARROBA", "INTERROGACION", "AMPERSAND", "PIPE", "CIRCUNFLEJO", "TILDE", 
			"ERROR_LEXICO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JavaESParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JavaESParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(JavaESParser.EOF, 0); }
		public List<ElementoGlobalContext> elementoGlobal() {
			return getRuleContexts(ElementoGlobalContext.class);
		}
		public ElementoGlobalContext elementoGlobal(int i) {
			return getRuleContext(ElementoGlobalContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaESParserListener ) ((JavaESParserListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaESParserListener ) ((JavaESParserListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1126757860115440L) != 0)) {
				{
				{
				setState(112);
				elementoGlobal();
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementoGlobalContext extends ParserRuleContext {
		public PaqueteDeclContext paqueteDecl() {
			return getRuleContext(PaqueteDeclContext.class,0);
		}
		public ImportacionDeclContext importacionDecl() {
			return getRuleContext(ImportacionDeclContext.class,0);
		}
		public ClaseDeclContext claseDecl() {
			return getRuleContext(ClaseDeclContext.class,0);
		}
		public DeclaracionGlobalContext declaracionGlobal() {
			return getRuleContext(DeclaracionGlobalContext.class,0);
		}
		public MetodoDeclContext metodoDecl() {
			return getRuleContext(MetodoDeclContext.class,0);
		}
		public ElementoGlobalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elementoGlobal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaESParserListener ) ((JavaESParserListener)listener).enterElementoGlobal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaESParserListener ) ((JavaESParserListener)listener).exitElementoGlobal(this);
		}
	}

	public final ElementoGlobalContext elementoGlobal() throws RecognitionException {
		ElementoGlobalContext _localctx = new ElementoGlobalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_elementoGlobal);
		try {
			setState(125);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				paqueteDecl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(121);
				importacionDecl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(122);
				claseDecl();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(123);
				declaracionGlobal();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(124);
				metodoDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PaqueteDeclContext extends ParserRuleContext {
		public TerminalNode PAQUETE() { return getToken(JavaESParser.PAQUETE, 0); }
		public RutaCalificadaContext rutaCalificada() {
			return getRuleContext(RutaCalificadaContext.class,0);
		}
		public TerminalNode PUNTO_Y_COMA() { return getToken(JavaESParser.PUNTO_Y_COMA, 0); }
		public PaqueteDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paqueteDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaESParserListener ) ((JavaESParserListener)listener).enterPaqueteDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaESParserListener ) ((JavaESParserListener)listener).exitPaqueteDecl(this);
		}
	}

	public final PaqueteDeclContext paqueteDecl() throws RecognitionException {
		PaqueteDeclContext _localctx = new PaqueteDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_paqueteDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(PAQUETE);
			setState(128);
			rutaCalificada();
			setState(129);
			match(PUNTO_Y_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportacionDeclContext extends ParserRuleContext {
		public TerminalNode IMPORTAR() { return getToken(JavaESParser.IMPORTAR, 0); }
		public RutaCalificadaContext rutaCalificada() {
			return getRuleContext(RutaCalificadaContext.class,0);
		}
		public TerminalNode PUNTO_Y_COMA() { return getToken(JavaESParser.PUNTO_Y_COMA, 0); }
		public ImportacionDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importacionDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaESParserListener ) ((JavaESParserListener)listener).enterImportacionDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaESParserListener ) ((JavaESParserListener)listener).exitImportacionDecl(this);
		}
	}

	public final ImportacionDeclContext importacionDecl() throws RecognitionException {
		ImportacionDeclContext _localctx = new ImportacionDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importacionDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(IMPORTAR);
			setState(132);
			rutaCalificada();
			setState(133);
			match(PUNTO_Y_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RutaCalificadaContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFICADOR() { return getTokens(JavaESParser.IDENTIFICADOR); }
		public TerminalNode IDENTIFICADOR(int i) {
			return getToken(JavaESParser.IDENTIFICADOR, i);
		}
		public List<TerminalNode> PUNTO() { return getTokens(JavaESParser.PUNTO); }
		public TerminalNode PUNTO(int i) {
			return getToken(JavaESParser.PUNTO, i);
		}
		public RutaCalificadaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rutaCalificada; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaESParserListener ) ((JavaESParserListener)listener).enterRutaCalificada(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaESParserListener ) ((JavaESParserListener)listener).exitRutaCalificada(this);
		}
	}

	public final RutaCalificadaContext rutaCalificada() throws RecognitionException {
		RutaCalificadaContext _localctx = new RutaCalificadaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_rutaCalificada);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(IDENTIFICADOR);
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PUNTO) {
				{
				{
				setState(136);
				match(PUNTO);
				setState(137);
				match(IDENTIFICADOR);
				}
				}
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClaseDeclContext extends ParserRuleContext {
		public TerminalNode CLASE() { return getToken(JavaESParser.CLASE, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(JavaESParser.IDENTIFICADOR, 0); }
		public TerminalNode LLAVE_ABIERTA() { return getToken(JavaESParser.LLAVE_ABIERTA, 0); }
		public TerminalNode LLAVE_CERRADA() { return getToken(JavaESParser.LLAVE_CERRADA, 0); }
		public ModificadoresContext modificadores() {
			return getRuleContext(ModificadoresContext.class,0);
		}
		public List<MiembroClaseContext> miembroClase() {
			return getRuleContexts(MiembroClaseContext.class);
		}
		public MiembroClaseContext miembroClase(int i) {
			return getRuleContext(MiembroClaseContext.class,i);
		}
		public ClaseDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_claseDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaESParserListener ) ((JavaESParserListener)listener).enterClaseDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaESParserListener ) ((JavaESParserListener)listener).exitClaseDecl(this);
		}
	}

	public final ClaseDeclContext claseDecl() throws RecognitionException {
		ClaseDeclContext _localctx = new ClaseDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_claseDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 33285996544L) != 0)) {
				{
				setState(143);
				modificadores();
				}
			}

			setState(146);
			match(CLASE);
			setState(147);
			match(IDENTIFICADOR);
			setState(148);
			match(LLAVE_ABIERTA);
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1125933192840176L) != 0)) {
				{
				{
				setState(149);
				miembroClase();
				}
				}
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(155);
			match(LLAVE_CERRADA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MiembroClaseContext extends ParserRuleContext {
		public DeclaracionVariableContext declaracionVariable() {
			return getRuleContext(DeclaracionVariableContext.class,0);
		}
		public MetodoDeclContext metodoDecl() {
			return getRuleContext(MetodoDeclContext.class,0);
		}
		public MiembroClaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_miembroClase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaESParserListener ) ((JavaESParserListener)listener).enterMiembroClase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaESParserListener ) ((JavaESParserListener)listener).exitMiembroClase(this);
		}
	}

	public final MiembroClaseContext miembroClase() throws RecognitionException {
		MiembroClaseContext _localctx = new MiembroClaseContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_miembroClase);
		try {
			setState(159);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				declaracionVariable();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(158);
				metodoDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionGlobalContext extends ParserRuleContext {
		public DeclaracionVariableContext declaracionVariable() {
			return getRuleContext(DeclaracionVariableContext.class,0);
		}
		public DeclaracionGlobalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionGlobal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaESParserListener ) ((JavaESParserListener)listener).enterDeclaracionGlobal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaESParserListener ) ((JavaESParserListener)listener).exitDeclaracionGlobal(this);
		}
	}

	public final DeclaracionGlobalContext declaracionGlobal() throws RecognitionException {
		DeclaracionGlobalContext _localctx = new DeclaracionGlobalContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declaracionGlobal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			declaracionVariable();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionVariableContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public VariablesDeclaradasContext variablesDeclaradas() {
			return getRuleContext(VariablesDeclaradasContext.class,0);
		}
		public TerminalNode PUNTO_Y_COMA() { return getToken(JavaESParser.PUNTO_Y_COMA, 0); }
		public ModificadoresContext modificadores() {
			return getRuleContext(ModificadoresContext.class,0);
		}
		public DeclaracionVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionVariable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaESParserListener ) ((JavaESParserListener)listener).enterDeclaracionVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaESParserListener ) ((JavaESParserListener)listener).exitDeclaracionVariable(this);
		}
	}

	public final DeclaracionVariableContext declaracionVariable() throws RecognitionException {
		DeclaracionVariableContext _localctx = new DeclaracionVariableContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declaracionVariable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 33285996544L) != 0)) {
				{
				setState(163);
				modificadores();
				}
			}

			setState(166);
			tipo();
			setState(167);
			variablesDeclaradas();
			setState(168);
			match(PUNTO_Y_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariablesDeclaradasContext extends ParserRuleContext {
		public List<VariableDeclaradaContext> variableDeclarada() {
			return getRuleContexts(VariableDeclaradaContext.class);
		}
		public VariableDeclaradaContext variableDeclarada(int i) {
			return getRuleContext(VariableDeclaradaContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(JavaESParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(JavaESParser.COMA, i);
		}
		public VariablesDeclaradasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variablesDeclaradas; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaESParserListener ) ((JavaESParserListener)listener).enterVariablesDeclaradas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaESParserListener ) ((JavaESParserListener)listener).exitVariablesDeclaradas(this);
		}
	}
